<resources>
  <string name="app_name">ThemeSetup</string>

  <string name="settings_text_select_theme">Select Theme:</string>
  <string name="settings_text_credentials">Credentials</string>
  <string name="settings_text_username_hint">username</string>
  <string name="settings_text_password_hint">password</string>
  <string name="settings_text_sync_automatically">Sync automatically</string>
  <string name="settings_text_location">Location</string>
  <string name="settings_text_state_on">On</string>
  <string name="settings_text_state_off">Off</string>
  <string name="settings_text_clear_data">Clear Data</string>

  <string-array name="array_themes">
    <item>Material-Light</item>
    <item>First cool theme</item>
  </string-array>
</resources>
