<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="?pageBackground"
    >

  <TextView
      android:id="@+id/tvSelectTheme"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/settings_text_select_theme"
      style="?textLarge"
      />

  <Spinner
      android:id="@+id/spThemes"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBaseline="@+id/tvSelectTheme"
      android:layout_alignParentEnd="true"
      android:layout_alignParentRight="true"
      android:layout_marginLeft="@dimen/spinner_margin_left"
      android:layout_marginStart="@dimen/spinner_margin_left"
      android:layout_toEndOf="@+id/tvSelectTheme"
      android:layout_toRightOf="@+id/tvSelectTheme"
      android:entries="@array/array_themes"
      android:spinnerMode="dropdown"
      style="?spinner"
      />

  <RelativeLayout
      android:id="@+id/rlCredentials"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/tvSelectTheme"
      style="?whiteBackground"
      >

    <TextView
        android:id="@+id/tvCredentials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_text_credentials"
        style="?textSubheader"
        />

    <EditText
        android:id="@+id/tvUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCredentials"
        android:hint="@string/settings_text_username_hint"
        android:inputType="text"
        android:lines="1"
        style="?textRegular"
        />

    <EditText
        android:id="@+id/tvpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUsername"
        android:layout_marginTop="@dimen/edittext_margin_top"
        android:hint="@string/settings_text_password_hint"
        android:inputType="textPassword"
        android:lines="1"
        style="?textRegular"
        />
  </RelativeLayout>

  <TextView
      android:id="@+id/tvSync"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/rlCredentials"
      android:text="@string/settings_text_sync_automatically"
      android:textSize="17sp"
      style="?textRegular"
      />

  <CheckBox
      android:id="@+id/checkbox_sync_automatically"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/tvSync"
      android:layout_alignParentRight="true"
      android:layout_alignParentEnd="true"
      android:checked="true"
      />

  <TextView
      android:id="@+id/tvLocation"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/tvSync"
      android:layout_marginTop="@dimen/view_margin"
      android:text="@string/settings_text_location"
      android:textSize="17sp"
      style="?textRegular"
      />

  <Switch
      android:id="@+id/toggle_google"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBaseline="@+id/tvLocation"
      android:layout_alignParentRight="true"
      android:layout_alignParentEnd="true"
      android:layout_toRightOf="@+id/tvLocation"
      android:layout_toEndOf="@+id/tvLocation"
      android:switchTextAppearance="@style/switch_text_appearance"
      android:textOff="@string/settings_text_state_off"
      android:textOn="@string/settings_text_state_on"
      />

  <Button
      android:id="@+id/btnClearData"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_centerHorizontal="true"
      android:layout_marginBottom="@dimen/view_margin"
      android:text="@string/settings_text_clear_data"
      style="?button"
      />

</RelativeLayout>